Bug 1156669 - Trash folder duplication while using IMAP with localized TB, r=neil